--- a/src/manifest.json
+++ b/src/manifest.json
@@ -4,7 +4,7 @@
   "manifest_version": 3,
   "description": "Sample Chrome Extension",
   "content_scripts": [{
-    "matches": ["https://github.com/itc-s24016/*"],
+    "matches": ["https://github.com/*"],
     "js": [
       "content.js"
     ]
